--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "postbuild": "npm run copy-fonts",
     "prebuild": "npm run clean && npm run compile-icons",
     "prepublish": "npm run build",
-    "start:storybook": "start-storybook -p 6006 -s public && npm run prettier-watch",
     "prettier-watch": "onchange 'src/**/*' -- prettier --write {{changed}}",
+    "start:storybook": "start-storybook -p 6006 -s public && npm run prettier-watch",
     "lint": "eslint src/**/* --ext .ts,.tsx --fix",
     "test": "npm run lint && jest"
   },
@@ -88,6 +88,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.7",
     "@types/storybook__addon-info": "^4.1.2",
     "@types/storybook__addon-knobs": "^5.0.2",
     "@types/storybook__react": "4.0.2",
@@ -113,6 +114,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "typescript": "^4.0.3"
   }
