--- a/package.json
+++ b/package.json
@@ -18,11 +18,6 @@
   "bugs": {
     "url": "https://github.com/artmrsvch/okmr-ui/issues"
   },
-  "dependencies": {
-    "styled-components": "^5.2.0",
-    "antd": "^4.15.0",
-    "@ant-design/colors": "^6.0.0"
-  },
   "scripts": {
     "build": "tsc --build \"./tsconfig.json\"",
     "build:storybook": "build-storybook -s public",
@@ -68,6 +63,9 @@
     "email-validator": ">=2.0.4"
   },
   "devDependencies": {
+    "styled-components": "^5.2.0",
+    "antd": "^4.15.0",
+    "@ant-design/colors": "^6.0.0",
     "@babel/core": "^7.11.6",
     "@storybook/addon-actions": "^5.1.9",
     "@storybook/addon-essentials": "^6.0.22",
