--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "dependencies": {
     "@ant-design/colors": "^6.0.0",
     "antd": "^4.15.0",
-    "storybook-addon-designs": "^5.4.5",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-import-resolver-webpack": "^0.13.0",
+    "storybook-addon-designs": "^6.0.0-beta.0",
     "styled-components": "^5.2.0"
   },
   "scripts": {
@@ -34,7 +36,7 @@
     "prepublish": "npm run build",
     "prettier-watch": "onchange 'src/**/*' -- prettier --write {{changed}}",
     "start:storybook": "start-storybook -p 6006 -s public && npm run prettier-watch",
-    "lint": "eslint src/**/* --ext .ts,.tsx --fix",
+    "lint": "eslint eslint src/**/* --ext .ts,.tsx --no-error-on-unmatched-pattern --fix",
     "test": "npm run lint && jest"
   },
   "eslintConfig": {
@@ -64,24 +66,23 @@
     ]
   },
   "peerDependencies": {
+    "email-validator": ">=2.0.4",
     "react": ">=16.13.1",
-    "react-dom": ">=16.13.1",
-    "email-validator": ">=2.0.4"
+    "react-dom": ">=16.13.1"
   },
   "devDependencies": {
-    "styled-components": "^5.2.0",
-    "antd": "^4.15.0",
     "@ant-design/colors": "^6.0.0",
     "@babel/core": "^7.11.6",
-    "@storybook/addon-actions": "^5.1.9",
-    "@storybook/addon-essentials": "^6.0.22",
-    "@storybook/addon-info": "5.1.9",
-    "@storybook/addon-knobs": "^5.3.21",
-    "@storybook/addon-links": "^6.0.22",
-    "@storybook/addons": "^5.1.9",
-    "@storybook/node-logger": "^6.0.22",
-    "@storybook/preset-create-react-app": "^3.1.4",
-    "@storybook/react": "^6.0.22",
+    "@storybook/addon-actions": "^6.3.0-alpha.13",
+    "@storybook/addon-controls": "^6.0.16",
+    "@storybook/addon-essentials": "^6.3.0-alpha.13",
+    "@storybook/addon-info": "6.0.0-alpha.2",
+    "@storybook/addon-knobs": "^6.3.0-alpha.13",
+    "@storybook/addon-links": "^6.3.0-alpha.13",
+    "@storybook/addons": "^6.3.0-alpha.13",
+    "@storybook/node-logger": "^6.3.0-alpha.13",
+    "@storybook/preset-create-react-app": "^3.1.7",
+    "@storybook/react": "^6.3.0-alpha.13",
     "@svgr/cli": "^5.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -91,33 +92,36 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.7",
-    "@types/storybook__addon-info": "^4.1.2",
-    "@types/storybook__addon-knobs": "^5.0.2",
+    "@types/storybook__addon-info": "^5.2.3",
+    "@types/storybook__addon-knobs": "^5.0.4",
     "@types/storybook__react": "4.0.2",
     "@types/styled-components": "^5.1.3",
-    "@typescript-eslint/eslint-plugin": "1.6.0",
-    "@typescript-eslint/parser": "1.6.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.0.1",
+    "antd": "^4.15.0",
     "babel-loader": "^8.1.0",
     "copyfiles": "^2.4.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "6.0.0",
-    "eslint-config-react-app": "^4.0.1",
-    "eslint-loader": "2.1.2",
-    "eslint-plugin-flowtype": "2.50.1",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint": "^7.24.0",
+    "eslint-config-prettier": "8.2.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "5.7.1",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "3.1.0",
-    "eslint-plugin-react": "7.12.4",
-    "eslint-plugin-react-hooks": "^1.5.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^3.0.0",
+    "i": "^0.3.6",
     "jest": "24.8.0",
+    "npm": "^7.10.0",
     "onchange": "6.0.0",
     "prettier": "1.18.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.4",
+    "styled-components": "^5.2.0",
     "typescript": "^4.0.3"
   }
 }
