--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,38 @@
 {
   "extends": [
+    "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "react-app",
-    "prettier",
-    "prettier/@typescript-eslint"
+    "airbnb",
+    "airbnb/hooks",
+    "prettier"
   ],
-  "plugins": ["@typescript-eslint", "react"],
+  "plugins": [
+    "@typescript-eslint",
+    "react"
+  ],
   "rules": {
     "@typescript-eslint/no-empty-interface": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
-    "@typescript-eslint/explicit-member-accessibility": "off"
+    "@typescript-eslint/explicit-member-accessibility": "off",
+    "no-use-before-define": "off",
+    "@typescript-eslint/no-use-before-define": ["error"],
+    "react/react-in-jsx-scope": "off",
+    //"react/jsx-filename-extension": [2, { "extensions": [",.js", ",.jsx", ",.ts", ",.tsx"] }],
+    "import/extensions": "off",
+    "react/jsx-props-no-spreading": 0,
+    "no-nested-ternary": "off",
+    "no-unused-vars" : "off",
+    "import/no-unresolved": 0,
+    "react/prop-types": "off",
+    "react/jsx-filename-extension": [1, { "allow": "as-needed" }],
+    "no-undef": 0,
+    "jsx-a11y/label-has-associated-control": [ 2, {
+      "labelComponents": ["CustomInputLabel"],
+      "labelAttributes": ["label"],
+      "controlComponents": ["CustomInput"],
+      "depth": 3
+    }],
+    "import/no-extraneous-dependencies": 0,
+    "import/prefer-default-export": "off"
   }
 }
