--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,6 @@
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
     "react/react-in-jsx-scope": "off",
-    //"react/jsx-filename-extension": [2, { "extensions": [",.js", ",.jsx", ",.ts", ",.tsx"] }],
     "import/extensions": "off",
     "react/jsx-props-no-spreading": 0,
     "no-nested-ternary": "off",
@@ -33,6 +32,7 @@
       "depth": 3
     }],
     "import/no-extraneous-dependencies": 0,
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "no-shadow": "off"
   }
 }
