--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "antd": "^4.15.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-import-resolver-webpack": "^0.13.0",
+    "lint-staged": "^10.5.4",
     "storybook-addon-designs": "^6.0.0-beta.0",
     "styled-components": "^5.2.0"
   },
@@ -111,7 +112,6 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^3.0.0",
-    "i": "^0.3.6",
     "jest": "24.8.0",
     "npm": "^7.10.0",
     "onchange": "6.0.0",
