--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "okmr-ui",
-  "version": "1.1.12",
+  "version": "1.2.0",
   "private": false,
   "license": "MIT",
   "main": "lib/index.js",
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "build": "tsc --build \"./tsconfig.json\"",
-    "build:storybook": "build-storybook -s public",
+    "build:storybook": "build-storybook",
     "clean": "rm -rf ./lib",
     "compile-icons": "npx @svgr/cli -d src/icons src/icons --typescript",
     "eject": "react-scripts eject",
@@ -48,11 +48,6 @@
       "prettier --write",
       "git add"
     ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run test && lint-staged"
-    }
   },
   "browserslist": {
     "production": [
