--- a/package.json
+++ b/package.json
@@ -22,19 +22,18 @@
     "@ant-design/colors": "^6.0.0",
     "antd": "^4.15.0",
     "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.4.4",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-import-resolver-webpack": "^0.13.0",
-    "storybook-addon-designs": "^6.0.0-beta.0",
     "react": "^16.14.0",
     "react-dom": "^16.12.0",
-    "react-is": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
+    "storybook-addon-designs": "^6.0.0-beta.0",
     "styled-components": "^5.2.0",
     "ts-jest": "^26.5.6",
-    "typescript": "^4.0.3",
-    "enzyme-adapter-react-16": "^1.15.6"
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "build": "tsc --build \"./tsconfig.json\"",
@@ -47,15 +46,10 @@
     "prettier-watch": "onchange 'src/**/*' -- prettier --write {{changed}}",
     "start:storybook": "start-storybook -p 6006 -s public && npm run prettier-watch",
     "lint": "eslint eslint src/**/* --ext .ts,.tsx --no-error-on-unmatched-pattern --fix",
-    "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!(okmr-ui)/)'"
+    "test": "jest --config jest.config.js"
   },
   "eslintConfig": {
     "extends": "react-app"
-  },
-  "jest": {
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ]
   },
   "lint-staged": {
     "*.{ts,tsx}": [
@@ -86,7 +80,6 @@
     "react-dom": ">=16.13.1"
   },
   "devDependencies": {
-    "@ant-design/colors": "^6.0.0",
     "@babel/plugin-transform-modules-commonjs": "^7.14.0",
     "@babel/preset-env": "^7.14.1",
     "@storybook/addon-actions": "^6.3.0-alpha.13",
@@ -103,6 +96,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/enzyme": "^3.10.8",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
