--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged && lint-staged",
-      "pre-push": "cross-env CI=true react-scripts test --env=jsdom"
+      "pre-push": "npm run test"
     }
   },
   "browserslist": {
