--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,10 +6,7 @@
     "airbnb/hooks",
     "prettier"
   ],
-  "plugins": [
-    "@typescript-eslint",
-    "react"
-  ],
+  "plugins": ["@typescript-eslint", "react"],
   "rules": {
     "@typescript-eslint/no-empty-interface": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
@@ -20,19 +17,23 @@
     "import/extensions": "off",
     "react/jsx-props-no-spreading": 0,
     "no-nested-ternary": "off",
-    "no-unused-vars" : "off",
+    "no-unused-vars": "off",
     "import/no-unresolved": 0,
     "react/prop-types": "off",
     "react/jsx-filename-extension": [1, { "allow": "as-needed" }],
     "no-undef": 0,
-    "jsx-a11y/label-has-associated-control": [ 2, {
-      "labelComponents": ["CustomInputLabel"],
-      "labelAttributes": ["label"],
-      "controlComponents": ["CustomInput"],
-      "depth": 3
-    }],
+    "jsx-a11y/label-has-associated-control": [
+      2,
+      {
+        "labelComponents": ["CustomInputLabel"],
+        "labelAttributes": ["label"],
+        "controlComponents": ["CustomInput"],
+        "depth": 3
+      }
+    ],
     "import/no-extraneous-dependencies": 0,
     "import/prefer-default-export": "off",
-    "no-shadow": "off"
+    "no-shadow": "off",
+    "no-underscore-dangle": "off"
   }
 }
