--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@storybook/addon-links": "^6.3.0-alpha.13",
     "@storybook/addons": "^6.3.0-alpha.13",
     "@storybook/node-logger": "^6.3.0-alpha.13",
+    "@storybook/preset-ant-design": "^0.0.2",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.3.0-alpha.13",
     "@svgr/cli": "^5.4.0",
