--- a/package.json
+++ b/package.json
@@ -21,19 +21,7 @@
   "dependencies": {
     "@ant-design/colors": "^6.0.0",
     "antd": "^4.15.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "enzyme-to-json": "^3.4.4",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-import-resolver-webpack": "^0.13.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.4",
-    "storybook-addon-designs": "^6.0.0-beta.0",
-    "styled-components": "^5.2.0",
-    "ts-jest": "^26.5.6",
-    "typescript": "^4.0.3"
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "build": "tsc --build \"./tsconfig.json\"",
@@ -126,6 +114,18 @@
     "jest-teamcity-reporter": "^0.9.0",
     "lint-staged": "^10.5.4",
     "prettier": "^1.19.1",
-    "pretty-quick": "^1.11.1"
+    "pretty-quick": "^1.11.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.2.0",
+    "ts-jest": "^26.5.6",
+    "typescript": "^4.0.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.4.4",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-import-resolver-webpack": "^0.13.0",
+    "react-scripts": "^3.4.4",
+    "storybook-addon-designs": "^6.0.0-beta.0"
   }
 }
