--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
       "pre-push": "npm run test"
     }
   },
+  "jest": {
+    "preset": "ts-jest"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -69,6 +72,7 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.14.0",
+    "@babel/plugin-transform-react-jsx": "^7.13.12",
     "@babel/preset-env": "^7.14.1",
     "@storybook/addon-actions": "^6.3.0-alpha.13",
     "@storybook/addon-controls": "^6.0.16",
@@ -100,8 +104,10 @@
     "@typescript-eslint/parser": "^4.0.1",
     "copyfiles": "^2.4.0",
     "eslint": "^7.24.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "8.2.0",
     "eslint-config-react-app": "^6.0.0",
+    "eslint-import-resolver-webpack": "^0.13.0",
     "eslint-plugin-flowtype": "5.7.1",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
@@ -118,14 +124,12 @@
     "react": "^16.14.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.2.0",
-    "ts-jest": "^26.5.6",
+    "react-scripts": "^3.4.4",
+    "storybook-addon-designs": "^6.0.0-beta.0",
     "typescript": "^4.0.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.4.4",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-import-resolver-webpack": "^0.13.0",
-    "react-scripts": "^3.4.4",
-    "storybook-addon-designs": "^6.0.0-beta.0"
+    "ts-jest": "^26.5.6"
   }
 }
