--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,10 @@
     "outDir": "lib",
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true,
-    "module": "esnext",
-    "noEmit": true
+    "sourceMap": true
   },
-  "include": ["src", "./src/declaration.d.ts"],
+  "include": ["src"],
+
   "exclude": [
     "node_modules",
     "**/*.test.ts",
